<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workout">

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.team1.hyteproject.ui.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.team1.hyteproject.ui.exercise.ExerciseFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.team1.hyteproject.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.team1.hyteproject.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>